# carla_ros_gps_tracking

./: README.md
control_publisher/: gps_points.txt
control_publisher/src/: main.cpp
control_publisher采集gps点/: CMakeLists.txt.bak  package.xml.bak  reference_points.txt
control_publisher采集gps点/launch/: gps_record.launch
control_publisher采集gps点/src/: main.cpp
gps_record/: CMakeLists.txt  package.xml
gps_record/src/: main.cpp
purepursuit/: CMakeLists.txt  package.xml
purepursuit/src/: purepursuit.cpp
referenline_points改/: CMakeLists.txt  gps_points.txt  gps_points1.txt  gps_points3.txt  package.xml  reference_points.txt
referenline_points改/src/: referenceline_points.cpp
